# cordelia-node

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md  WHITEPAPER.md  sonar-project.properties
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/cordelia-api/: Cargo.toml
crates/cordelia-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  state.rs  types.rs
crates/cordelia-api/tests/: api_integration.rs
crates/cordelia-core/: Cargo.toml
crates/cordelia-core/src/: config.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/cordelia-crypto/: Cargo.toml
crates/cordelia-crypto/src/: aes_gcm.rs  bech32.rs  ecies.rs  identity.rs  lib.rs  psk_envelope.rs  signing.rs
crates/cordelia-network/: Cargo.toml
crates/cordelia-network/src/: bootstrap.rs  channel_announce.rs  codec.rs  connection.rs  governor.rs  handshake.rs  item_sync.rs  keepalive.rs  lib.rs  messages.rs  peer_sharing.rs  psk_exchange.rs  rate_limit.rs  seen_table.rs  transport.rs
crates/cordelia-network/tests/: rate_limiting.rs  two_node.rs
crates/cordelia-node/: Cargo.toml
crates/cordelia-node/src/: main.rs  p2p.rs
crates/cordelia-storage/: Cargo.toml
crates/cordelia-storage/src/: channels.rs  db.rs  items.rs  lib.rs  naming.rs  psk.rs  schema.rs  search.rs
crates/cordelia-test/: Cargo.toml
crates/cordelia-test/src/: lib.rs
deploy/bootnode/: DNS-SETUP.md  Dockerfile  config.toml  fly.boot1.toml  fly.boot2.toml
docs/decisions/: 2026-03-09-architecture-simplification.md  2026-03-09-mvp-implementation-plan.md  2026-03-09-spo-economic-model.md  2026-03-10-identity-privacy-model.md  2026-03-10-phase1-design-decisions.md  2026-03-10-testing-strategy-bdd.md  2026-03-15-peer-state-semantics.md  2026-03-15-tcp-vs-udp-transport.md  2026-03-20-relay-forwarding-route-discovery.md
docs/reference/: encryption-test-vectors.md  game-theory.md  network-model.md  risk-model.md
docs/specs/: architecture-overview.md  attack-trees.md  channel-naming.md  channels-api.md  configuration.md  connection-lifecycle.md  data-formats.md  debug-telemetry.md  demand-model.md  ecies-envelope-encryption.md  glossary.md  identity.md  memory-model.md  network-behaviour.md  network-protocol.cfg  network-protocol.md  network-protocol.tla  operations.md  parameter-rationale.md  review-architecture-overview-2026-04-17.md  review-attack-trees-2026-04-17.md  review-build-verification.md  review-configuration-2026-04-17.md  review-connection-lifecycle-2026-04-17.md  review-data-formats-2026-04-17.md  review-debug-telemetry-2026-04-17.md  review-demand-model-2026-04-17.md  review-errors.md  review-identity-2026-04-17.md  review-implementability.md  review-memory-model-2026-04-17.md  review-methodology.md  review-network-behaviour-2026-04-17.md  review-operations-2026-04-17.md  review-parameter-rationale-2026-04-17.md  review-privacy.md  review-search-indexing-2026-04-17.md  review-sprint-summary-2026-04-17.md  review-status-2026-04-17.md  review-terminology.md  (+7 more)
scripts/: install.sh
tests/e2e/: Dockerfile  build-image.sh  entrypoint.sh  run-e2e.sh  smoke-test.sh
tests/e2e/assertions/: common.sh
tests/e2e/configs/t1/: b1.toml  p1.toml  p2.toml
tests/e2e/configs/t2/: b1.toml  p1.toml  p2.toml  r1.toml
tests/e2e/configs/t3/: b1.toml  p1.toml  p2.toml  r1.toml
tests/e2e/configs/t4/: b1.toml  p1.toml  p2.toml  p3.toml  r1.toml  r2.toml
tests/e2e/configs/t5/: b1.toml  p1.toml  p2.toml  r1.toml  r2.toml
tests/e2e/configs/t6/: b1.toml  p1.toml  p2.toml  p3.toml
tests/e2e/configs/t7/: b1.toml  p1.toml  p2.toml  p3.toml  r1.toml
tests/e2e/harness/: orchestrator.py  query.py  schema.sql
tests/e2e/harness/scenarios/: s2-r100-sparse.toml  s2-r20-stress.toml  s2-r20.toml  s2-r200-sparse.toml  s2-r30-ppz7.toml  s2-r50-sparse.toml  s2-r50.toml  s3-n4.toml
tests/e2e/scale/: diagnose-s2.sh  generate-s2.sh  generate-s3.sh  generate-scale.sh  run-s2.sh  run-s3.sh  run-scale.sh
tests/e2e/topologies/: run-all.sh  run-t1.sh  run-t2.sh  run-t3.sh  run-t4.sh  run-t5.sh  run-t6.sh  run-t7.sh  t1.yml  t2.yml  t3.yml  t4.yml  t5.yml  t6.yml  t7.yml
