[package]
name = "cordelia-storage"
description = "SQLite storage: channels, items, PSK management, search indexes, migrations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cordelia-core = { workspace = true }
cordelia-crypto = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
